k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aiappsy-web-studio
  labels:
    app: aiappsy-web-studio
spec:
  selector:
    app: aiappsy-web-studio
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
  type: NodePort
